add Android implementation of twitter_sign_in

--- a/twitter_sign_in/android/build.gradle
+++ b/twitter_sign_in/android/build.gradle
@@ -30,3 +30,10 @@ android {
         disable 'InvalidPackage'
     }
 }
+
+dependencies {
+    compile 'com.twitter.sdk.android:twitter-core:3.0.0'
+    //compile 'com.twitter.sdk.android:tweet-ui:3.0.0'
+    //compile 'com.twitter.sdk.android:tweet-composer:3.0.0'
+    //compile 'com.twitter.sdk.android:twitter-mopub:3.0.0'
+}
