--- a/image_picker/example/android/app/src/main/AndroidManifest.xml
+++ b/image_picker/example/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.linchaolong.android.imagepicker.cropper.CropImageActivity"
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
     </application>
 </manifest>
